--- a/public/wp-content/themes/blackrock/scss/modules/_contact.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_contact.scss
@@ -1,14 +1,12 @@
 .contact-module-container {
 	background-color: #000000;
 	width: 100vw;
-	margin-top: calc(100vw / 12);
-	padding-top: 0;
+	padding-top: 100px;
 	padding-bottom: 0;
 	position: relative;
-	z-index: 4;
+	z-index: 1;
 
 	@media #{$mq-tablet-port} {
-		margin-top: calc(100vw / 12);
 		padding-top: calc(100vw / 12);
 		padding-bottom: calc(100vw / 12);
 	}
