--- a/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
@@ -250,7 +250,7 @@
 			background-color: black;
 
 			.column-reveal_container {
-
+				height: 100vh !important;
 				background-color: black;
 			}
 
