--- a/public/wp-content/themes/blackrock/scss/modules/_modal_popup.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_modal_popup.scss
@@ -46,15 +46,15 @@
         height: calc(100vh - 60px);
         overflow: hidden;
         position: relative;
-        
+
         img {
-            max-width:100%;
-            max-height:calc(100% - 80px);
+            max-width: 100%;
+            max-height: calc(100% - 80px);
             object-fit: contain;
             position: relative;
-            top: 0;
+            top: 45%;
             left: 50%;
-            transform: translate(-50%, 0);
+            transform: translate(-50%, -50%);
         }
 
         .caption {
