--- a/public/wp-content/themes/blackrock/scss/modules/_one_col_copy_image.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_one_col_copy_image.scss
@@ -48,6 +48,7 @@
         @media #{$mq-tablet-port} {
             width: auto;
             height: auto;
+            max-height: none;
         }
 
         img {
