--- a/public/wp-content/themes/blackrock/css/style.css
+++ b/public/wp-content/themes/blackrock/css/style.css
@@ -515,64 +515,64 @@ a.button svg {
     height: 20px;
   }
 }
-/* line 37, ../scss/elements/_buttons.scss */
+/* line 39, ../scss/elements/_buttons.scss */
 a.button:hover svg {
   transform: translate(5px, -50%);
 }
 
-/* line 46, ../scss/elements/_buttons.scss */
+/* line 48, ../scss/elements/_buttons.scss */
 .page-cream a.button,
 .page-white a.button {
   border: 1px solid #FFFFFF;
   color: #000000;
 }
-/* line 50, ../scss/elements/_buttons.scss */
+/* line 52, ../scss/elements/_buttons.scss */
 .page-cream a.button:active, .page-cream a.button:visited,
 .page-white a.button:active,
 .page-white a.button:visited {
   color: #000000;
 }
-/* line 57, ../scss/elements/_buttons.scss */
+/* line 59, ../scss/elements/_buttons.scss */
 .page-cream a.button svg path,
 .page-white a.button svg path {
   stroke: #000000;
 }
-/* line 62, ../scss/elements/_buttons.scss */
+/* line 64, ../scss/elements/_buttons.scss */
 .page-cream a.button:hover,
 .page-white a.button:hover {
   background-color: #FFFFFF;
   color: #000000;
 }
-/* line 68, ../scss/elements/_buttons.scss */
+/* line 70, ../scss/elements/_buttons.scss */
 .page-cream a.button:hover svg path,
 .page-white a.button:hover svg path {
   stroke: #000000;
 }
 
-/* line 77, ../scss/elements/_buttons.scss */
+/* line 79, ../scss/elements/_buttons.scss */
 .page-black a.button {
   border: 1px solid #FFFFFF;
   color: #FFFFFF;
 }
-/* line 81, ../scss/elements/_buttons.scss */
+/* line 83, ../scss/elements/_buttons.scss */
 .page-black a.button:active, .page-black a.button:visited {
   color: #FFFFFF;
 }
-/* line 88, ../scss/elements/_buttons.scss */
+/* line 90, ../scss/elements/_buttons.scss */
 .page-black a.button svg path {
   stroke: #FFFFFF;
 }
-/* line 93, ../scss/elements/_buttons.scss */
+/* line 95, ../scss/elements/_buttons.scss */
 .page-black a.button:hover {
   background-color: #FFFFFF;
   color: #000000;
 }
-/* line 99, ../scss/elements/_buttons.scss */
+/* line 101, ../scss/elements/_buttons.scss */
 .page-black a.button:hover svg path {
   stroke: #000000;
 }
 
-/* line 107, ../scss/elements/_buttons.scss */
+/* line 109, ../scss/elements/_buttons.scss */
 #floor-toggle,
 .map .map-container .toggle {
   display: block;
@@ -588,7 +588,7 @@ a.button:hover svg {
   position: relative;
   cursor: pointer;
 }
-/* line 118, ../scss/elements/_buttons.scss */
+/* line 120, ../scss/elements/_buttons.scss */
 #floor-toggle:before,
 .map .map-container .toggle:before {
   position: absolute;
@@ -602,7 +602,7 @@ a.button:hover svg {
   border-radius: 12px;
   transition: all 0.3s ease 0s;
 }
-/* line 131, ../scss/elements/_buttons.scss */
+/* line 133, ../scss/elements/_buttons.scss */
 #floor-toggle:after,
 .map .map-container .toggle:after {
   position: absolute;
@@ -616,24 +616,26 @@ a.button:hover svg {
   background: #5B5B5B;
   transition: all 0.3s ease 0s;
 }
-/* line 146, ../scss/elements/_buttons.scss */
-#floor-toggle:hover:before,
-.map .map-container .toggle:hover:before {
-  border-color: #0627CA;
-  background-color: #0627CA;
+@media (hover: hover) {
+  /* line 149, ../scss/elements/_buttons.scss */
+  #floor-toggle:hover:before,
+  .map .map-container .toggle:hover:before {
+    border-color: #0627CA;
+    background-color: #0627CA;
+  }
+  /* line 154, ../scss/elements/_buttons.scss */
+  #floor-toggle:hover:after,
+  .map .map-container .toggle:hover:after {
+    background-color: #FFFFFF;
+  }
 }
-/* line 151, ../scss/elements/_buttons.scss */
-#floor-toggle:hover:after,
-.map .map-container .toggle:hover:after {
-  background-color: #FFFFFF;
-}
-/* line 157, ../scss/elements/_buttons.scss */
+/* line 161, ../scss/elements/_buttons.scss */
 #floor-toggle.active:before,
 .map .map-container .toggle.active:before {
   border-color: #0627CA;
   background-color: #0627CA;
 }
-/* line 162, ../scss/elements/_buttons.scss */
+/* line 166, ../scss/elements/_buttons.scss */
 #floor-toggle.active:after,
 .map .map-container .toggle.active:after {
   background-color: #FFFFFF;
@@ -1113,25 +1115,25 @@ a.button:hover svg {
   background-color: var(--availableColor);
   height: auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   /* line 103, ../scss/modules/_floors.scss */
   .floors .floor-list .floor.expanded {
     height: 460px;
   }
 }
-/* line 114, ../scss/modules/_floors.scss */
+/* line 112, ../scss/modules/_floors.scss */
 .floors .floor-list .floor.expanded header {
   display: grid;
   grid-template-columns: 3fr 9fr;
   grid-template-areas: "floor-num floor-sqft";
 }
-@media (min-width: 768px) {
-  /* line 114, ../scss/modules/_floors.scss */
+@media (min-width: 1024px) {
+  /* line 112, ../scss/modules/_floors.scss */
   .floors .floor-list .floor.expanded header {
     grid-template-columns: 2fr 10fr;
   }
 }
-/* line 124, ../scss/modules/_floors.scss */
+/* line 122, ../scss/modules/_floors.scss */
 .floors .floor-list .floor.expanded header span {
   font-weight: normal;
   font-size: 30px;
@@ -1141,8 +1143,8 @@ a.button:hover svg {
   font-family: "PPNeueMontreal-Medium";
   padding-top: 10px;
 }
-@media (min-width: 768px) {
-  /* line 124, ../scss/modules/_floors.scss */
+@media (min-width: 1024px) {
+  /* line 122, ../scss/modules/_floors.scss */
   .floors .floor-list .floor.expanded header span {
     font-weight: normal;
     font-size: 50px;
@@ -1152,54 +1154,54 @@ a.button:hover svg {
     font-family: "PPNeueMontreal-Regular";
   }
 }
-/* line 133, ../scss/modules/_floors.scss */
+/* line 131, ../scss/modules/_floors.scss */
 .floors .floor-list .floor.expanded header .floor-header_floor-number {
   grid-area: floor-num;
 }
-/* line 137, ../scss/modules/_floors.scss */
+/* line 135, ../scss/modules/_floors.scss */
 .floors .floor-list .floor.expanded header .floor-header_name-sqft {
   grid-area: floor-sqft;
   position: static;
   display: block;
 }
 @media (min-width: 768px) {
-  /* line 137, ../scss/modules/_floors.scss */
+  /* line 135, ../scss/modules/_floors.scss */
   .floors .floor-list .floor.expanded header .floor-header_name-sqft {
     display: block;
   }
 }
-/* line 149, ../scss/modules/_floors.scss */
+/* line 147, ../scss/modules/_floors.scss */
 .floors .floor-list .floor.expanded .unit {
   display: none;
 }
-/* line 154, ../scss/modules/_floors.scss */
+/* line 152, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .floor-number {
   position: absolute;
   z-index: 2;
   color: #FFFFFF;
 }
-/* line 160, ../scss/modules/_floors.scss */
+/* line 158, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit {
   flex: 1;
   height: 35px;
   color: #FFFFFF;
 }
-/* line 165, ../scss/modules/_floors.scss */
+/* line 163, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .close-unit {
   display: none;
 }
-/* line 169, ../scss/modules/_floors.scss */
+/* line 167, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content {
   display: none;
 }
-@media (min-width: 768px) {
-  /* line 169, ../scss/modules/_floors.scss */
+@media (min-width: 1024px) {
+  /* line 167, ../scss/modules/_floors.scss */
   .floors .floor-list .floor .unit .content {
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-areas: ". . data data data . img img img img img . .";
+    grid-template-columns: 4fr 7fr 1fr 10fr 2fr;
+    grid-template-areas: ". data . img .";
   }
 }
-/* line 177, ../scss/modules/_floors.scss */
+/* line 175, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data {
   grid-area: data;
   display: block;
@@ -1208,7 +1210,7 @@ a.button:hover svg {
   padding: 0;
   overflow: hidden;
 }
-/* line 185, ../scss/modules/_floors.scss */
+/* line 183, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data li {
   display: grid;
   padding: 15px 0;
@@ -1216,13 +1218,13 @@ a.button:hover svg {
   grid-template-columns: 2fr 1fr;
   gap: 0px 10px;
 }
-/* line 192, ../scss/modules/_floors.scss */
+/* line 190, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data li:first-of-type {
   border-style: none;
   display: block;
   padding-top: 0;
 }
-/* line 198, ../scss/modules/_floors.scss */
+/* line 196, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data li span {
   display: block;
   overflow: hidden;
@@ -1235,18 +1237,18 @@ a.button:hover svg {
   margin-bottom: 0;
   padding-top: 0;
 }
-/* line 206, ../scss/modules/_floors.scss */
+/* line 204, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data li span:last-of-type {
   justify-self: end;
 }
-/* line 211, ../scss/modules/_floors.scss */
+/* line 209, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data li a {
   display: block;
   overflow: hidden;
   width: 32px;
   height: 32px;
 }
-/* line 218, ../scss/modules/_floors.scss */
+/* line 216, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data li h3 {
   padding-top: 0;
   margin-top: 0;
@@ -1259,31 +1261,31 @@ a.button:hover svg {
   margin-bottom: 0;
   font-weight: normal;
 }
-/* line 228, ../scss/modules/_floors.scss */
+/* line 226, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .data li svg path {
   stroke: #FFFFFF;
 }
-/* line 235, ../scss/modules/_floors.scss */
+/* line 233, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit .content .image {
   display: block;
   overflow: hidden;
   grid-area: img;
   padding-top: 40px;
 }
-@media (min-width: 768px) {
-  /* line 235, ../scss/modules/_floors.scss */
+@media (min-width: 1024px) {
+  /* line 233, ../scss/modules/_floors.scss */
   .floors .floor-list .floor .unit .content .image {
     padding-top: 0;
   }
 }
-/* line 247, ../scss/modules/_floors.scss */
+/* line 245, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit.selected {
   width: 100%;
   display: block;
   position: relative;
   height: auto;
 }
-/* line 253, ../scss/modules/_floors.scss */
+/* line 251, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit.selected .close-unit {
   display: block;
   position: absolute;
@@ -1291,19 +1293,19 @@ a.button:hover svg {
   right: 10px;
   z-index: 2;
 }
-/* line 261, ../scss/modules/_floors.scss */
+/* line 259, ../scss/modules/_floors.scss */
 .floors .floor-list .floor .unit.selected .content {
   display: block;
   padding: 40px 20px 20px 20px;
 }
-@media (min-width: 768px) {
-  /* line 261, ../scss/modules/_floors.scss */
+@media (min-width: 1024px) {
+  /* line 259, ../scss/modules/_floors.scss */
   .floors .floor-list .floor .unit.selected .content {
     display: grid;
     padding: 40px 0 0 0;
   }
 }
-/* line 275, ../scss/modules/_floors.scss */
+/* line 273, ../scss/modules/_floors.scss */
 .floors .close-unit {
   position: absolute;
   top: 20px;
@@ -1315,16 +1317,16 @@ a.button:hover svg {
   padding: 0;
   background-color: transparent;
 }
-/* line 286, ../scss/modules/_floors.scss */
+/* line 284, ../scss/modules/_floors.scss */
 .floors .close-unit svg {
   pointer-events: none;
   transition: all 0.3s ease 0s;
 }
-/* line 290, ../scss/modules/_floors.scss */
+/* line 288, ../scss/modules/_floors.scss */
 .floors .close-unit svg path {
   stroke: #FFFFFF;
 }
-/* line 296, ../scss/modules/_floors.scss */
+/* line 294, ../scss/modules/_floors.scss */
 .floors .close-unit:hover svg {
   transform: rotate(90deg);
 }
@@ -2964,9 +2966,10 @@ a.button:hover svg {
   .one-col-copy-image.page-hero .mobile-image-container {
     width: auto;
     height: auto;
+    max-height: none;
   }
 }
-/* line 53, ../scss/modules/_one_col_copy_image.scss */
+/* line 54, ../scss/modules/_one_col_copy_image.scss */
 .one-col-copy-image.page-hero .mobile-image-container img {
   position: relative;
   height: 100%;
@@ -2975,13 +2978,13 @@ a.button:hover svg {
   transform: translateX(-50%);
 }
 @media (min-width: 768px) {
-  /* line 53, ../scss/modules/_one_col_copy_image.scss */
+  /* line 54, ../scss/modules/_one_col_copy_image.scss */
   .one-col-copy-image.page-hero .mobile-image-container img {
     height: auto;
     width: 100%;
   }
 }
-/* line 67, ../scss/modules/_one_col_copy_image.scss */
+/* line 68, ../scss/modules/_one_col_copy_image.scss */
 .one-col-copy-image.page-hero .copy {
   margin-top: 80px;
   margin-bottom: 80px;
@@ -2992,12 +2995,12 @@ a.button:hover svg {
   .one-col-copy-image.page-hero {
     margin-top: calc((100vw / 12));
   }
-  /* line 76, ../scss/modules/_one_col_copy_image.scss */
+  /* line 77, ../scss/modules/_one_col_copy_image.scss */
   .one-col-copy-image.page-hero .copy {
     margin-bottom: calc(100vw / 12);
   }
 }
-/* line 81, ../scss/modules/_one_col_copy_image.scss */
+/* line 82, ../scss/modules/_one_col_copy_image.scss */
 .one-col-copy-image.page-hero .copy blockquote p {
   font-weight: normal;
   font-size: 30px;
@@ -3007,7 +3010,7 @@ a.button:hover svg {
   font-family: "PPNeueMontreal-Medium";
 }
 @media (min-width: 1024px) {
-  /* line 81, ../scss/modules/_one_col_copy_image.scss */
+  /* line 82, ../scss/modules/_one_col_copy_image.scss */
   .one-col-copy-image.page-hero .copy blockquote p {
     font-weight: normal;
     font-size: 50px;
@@ -3017,15 +3020,15 @@ a.button:hover svg {
     font-family: "PPNeueMontreal-Regular";
   }
 }
-/* line 88, ../scss/modules/_one_col_copy_image.scss */
+/* line 89, ../scss/modules/_one_col_copy_image.scss */
 .one-col-copy-image.page-hero .copy blockquote p:first-of-type {
   margin-top: 0;
 }
-/* line 92, ../scss/modules/_one_col_copy_image.scss */
+/* line 93, ../scss/modules/_one_col_copy_image.scss */
 .one-col-copy-image.page-hero .copy blockquote p:last-of-type {
   margin-top: 0;
 }
-/* line 96, ../scss/modules/_one_col_copy_image.scss */
+/* line 97, ../scss/modules/_one_col_copy_image.scss */
 .one-col-copy-image.page-hero .copy blockquote p span {
   font-size: 20px;
   line-height: 1.3em;
